objects/ssot__GroundTravelEnergyUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CostCenterNumber__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceNumber__c</fullName>
        <label>Distance Traveled</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceUnitId__c</fullName>
        <label>Distance Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExpenseType__c</fullName>
        <label>Expense Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroundTravelEmssnFctrId__c</fullName>
        <label>Ground Travel Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Ground Travel Energy Use Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PcmtEmssnFctrSetItem__c</fullName>
        <label>Procurement Emission Factor Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3CrbnFtprntId__c</fullName>
        <label>Scope 3 Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emission Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3GhgCategory__c</fullName>
        <label>Scope 3 GHG Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3EmissionsNumber__c</fullName>
        <label>Supl Scope 3 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelerName__c</fullName>
        <label>Traveler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TripCostAmount__c</fullName>
        <label>Trip Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383584720_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GroundTravelEnergyUse_PcmtEmssnFctrS_rel</label>
        <referenceTo>ssot__ProcurementEmissionFactorSetItem__dlm</referenceTo>
        <relationshipLabel>GroundTravelEnergyUse_PcmtEmssnFctrS_rel</relationshipLabel>
        <relationshipName>rel_1747383584720_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383589067_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GroundTravelEnergyUse_AccountId_map__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GroundTravelEnergyUse_AccountId_map__rel</relationshipLabel>
        <relationshipName>rel_1747383589067_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383590341_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GroundTravelEnergyUse_GroundTravelEm_rel</label>
        <referenceTo>ssot__GroundTravelEmissionFactor__dlm</referenceTo>
        <relationshipLabel>GroundTravelEnergyUse_GroundTravelEm_rel</relationshipLabel>
        <relationshipName>rel_1747383590341_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>